# Codaphela.Test

./: CMakeLists.txt  do_build.bat  do_run.bat
CMakeModules/: FindDirectX.cmake  FindPkgMacros.cmake
TestBaseLib/TestBaseLib/: CMakeLists.txt
